--- a/name_project/templates/faq.html
+++ b/name_project/templates/faq.html
@@ -2,24 +2,25 @@
 
 {% block content %}
   <div class="div-2">
+  <div class="row">
   <h2>Can I suggest a word?</h2>
   <p>Absolutely! <a class="mail" href="mailto:hello@helpmenamemyproject.com">Email us!</a> </p>
+  </div>
+  <div class="row">
   <h2>Are any of the generated project names existing projects?</h2>
   <p>Not intentionally - the project names are generated at random from a list of adjectives and a list of nouns. However, there are adjectives and nouns inspired by real projects, so you might just land on a correct pairing.</p>
+    </div>
+  <div class="row">
   <h2>Can I actually use a generated project name for my next project?</h2>
   <p>We dare you to.</p>
+    </div>
+  <div class="row">
   <h2>Are you a project developer?</h2>
   <p>Nope!</p>
+    </div>
+  <div class="row">
   <h2>Is this site affiliated with any business, developer, brand, consultant, engineering firm, car enthusiast auction site, supermarket chain, 7 time grammy award winning musician, NHL team, etc.?</h2>
   <p>No - views expressed within this page are independent of any external entity. </p>
    </div>
+   </div>
 {% endblock %}
-
-{% block nav %}
-		<p>
-			<a class="info" href="/info">info</a> 
-			<a class="home" href="/">back to the generator</a>
-		</p>
-{% endblock %}
-
-
