--- a/name_project/templates/info.html
+++ b/name_project/templates/info.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <div class="div-2">
-  <h2>In a transitional state right now, check back soon for updates!</h2>
+  <h2>Have you ever seen a housing development, wind or solar farm, shopping center, etc. &amp; thought to yourself: "The name of this project seems like it's just an adjective + some kind of natural feature?" Yeah, us too.</h2>
    </div>
 {% endblock %}
