--- a/name_project/templates/info.html
+++ b/name_project/templates/info.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <div class="div-2">
-  <h2>Have you ever seen a housing development, wind or solar farm, shopping center, etc. &amp; thought to yourself: "The name of this project seems like it's just an adjective + some kind of natural feature?" Yeah, us too.</h2>
-   </div>
+  <p>Have you ever seen a housing development, renewable energy project, shopping center, etc. &amp; thought to yourself: "The name of this seems like it's just an adjective + some kind of natural feature?"</p>
+    <h2>Yeah, us too.</h2>
+</div>
 {% endblock %}
