--- a/name_project/templates/base.html
+++ b/name_project/templates/base.html
@@ -42,6 +42,56 @@
 		<p>
 			Built by <a class="foot" href="https://tacobelllabs.net/@robotmlg">Matt</a> &amp; Rae Goldman
 		</p>
+		<p> Sponsored by Good Steward Consulting 
+		<div>
+		<a href="https://www.goodstewardconsulting.com" target="_self">
+                                        <div>
+                                            <?xml version="1.0" encoding="UTF-8"?>
+                                            <svg preserveAspectRatio="xMidYMid meet" data-bbox="4.5 6.435 789 182.13" viewBox="0 0 798 195" height="195" width="798" xmlns="http://www.w3.org/2000/svg" data-type="ugc" role=presentation aria-hidden=true>
+                                                <g>
+                                                    <linearGradient y2="158.65" x2="122.144" y1="94.782" x1="83.346" gradientUnits="userSpaceOnUse" id="b51e4707-4c5a-4fd8-83e1-484d74550baa_comp-jpdq366t">
+                                                        <stop offset="0" stop-color="#94ce07"/>
+                                                        <stop offset="1" stop-color="#4f9c02"/>
+                                                    </linearGradient>
+                                                    <path d="M186.63 42.28v73.14c0 43.764-33.258 73.144-74.526 73.144H5.138C39.79 49.505 158.815 42.077 186.63 42.28z" fill="url(#b51e4707-4c5a-4fd8-83e1-484d74550baa_comp-jpdq366t)" clip-rule="evenodd" fill-rule="evenodd"/>
+                                                    <linearGradient y2="86.646" x2="174.048" y1="86.646" x1="28.009" gradientUnits="userSpaceOnUse" id="5166a1b3-3bc0-42d5-91b3-ca78adb0ee4f_comp-jpdq366t">
+                                                        <stop offset="0" stop-color="#94ce07"/>
+                                                        <stop offset="1" stop-color="#4f9c02"/>
+                                                    </linearGradient>
+                                                    <path d="M174.048 42.675c-9.781 27.998-40.619 56.964-82.806 74.134-21.776 8.861-43.573 13.342-63.233 13.808 41.66-72.138 112.632-85.712 146.04-87.942z" fill="url(#5166a1b3-3bc0-42d5-91b3-ca78adb0ee4f_comp-jpdq366t)" clip-rule="evenodd" fill-rule="evenodd"/>
+                                                    <linearGradient y2="65.756" x2="186.629" y1="65.756" x1="4.5" gradientUnits="userSpaceOnUse" id="48a626bf-db64-4732-9d95-a99cda7219e0_comp-jpdq366t">
+                                                        <stop offset="0" stop-color="#fbbf11"/>
+                                                        <stop offset="1" stop-color="#fb9511"/>
+                                                    </linearGradient>
+                                                    <path d="M4.5 125.076v-24.941c44.689-61.258 128.559-60.582 128.559-60.582C63.977 33.258 18.782 64.485 4.5 76.174V57.476c0-32.735 26.402-51.04 59.636-51.04H186.63V41.82C64.827 29.222 16.158 103.12 4.5 125.076z" fill="url(#48a626bf-db64-4732-9d95-a99cda7219e0_comp-jpdq366t)" clip-rule="evenodd" fill-rule="evenodd"/>
+                                                    <path d="M292.553 32.882v30.731h-44.655c-20.185 0-27.107-9.722-27.107-28.26 0-18.454 6.922-28.094 27.107-28.094h43.996V18.71h-43.996c-13.43 0-15.078 5.85-15.078 16.643 0 10.876 1.648 16.724 15.078 16.724h32.873V32.882h11.782z" fill="#94CE07"/>
+                                                    <path d="M379.312 35.437c0 21.832-12.688 29-39.548 29-26.858 0-39.546-7.168-39.546-29 0-21.834 12.688-29.002 39.546-29.002 26.86 0 39.548 7.168 39.548 29.002zm-12.03 0c0-15.738-9.062-17.88-27.518-17.88-18.455 0-27.518 2.143-27.518 17.88 0 15.736 9.063 17.877 27.518 17.877 18.456 0 27.519-2.141 27.519-17.877z" fill="#94CE07"/>
+                                                    <path d="M464.67 35.437c0 21.832-12.686 29-39.547 29-26.858 0-39.547-7.168-39.547-29 0-21.834 12.689-29.002 39.547-29.002 26.861 0 39.547 7.168 39.547 29.002zm-12.027 0c0-15.738-9.064-17.88-27.52-17.88-18.455 0-27.52 2.143-27.52 17.88 0 15.736 9.065 17.877 27.52 17.877 18.456 0 27.52-2.141 27.52-17.877z" fill="#94CE07"/>
+                                                    <path d="M473.736 7.258h46.305c20.184 0 27.106 9.64 27.106 28.178s-6.922 28.177-27.106 28.177h-46.305V7.258zm46.305 11.453h-34.523v33.367h34.523c13.43 0 15.076-5.849 15.076-16.641 0-10.795-1.646-16.726-15.076-16.726z" fill="#94CE07"/>
+                                                    <path d="M271.05 126.087c6.92 0 9.144-2.143 9.144-5.272 0-3.79-3.378-5.684-11.452-6.344l-27.27-2.141c-12.69-.99-20.269-5.521-20.269-15.903 0-11.946 10.051-16.148 21.668-16.148h45.81v10.546H241.8c-5.52 0-8.65 1.482-8.65 5.273 0 3.131 2.14 4.779 11.368 5.52l25.953 2.06c13.265 1.071 21.834 5.273 21.834 16.643 0 9.555-6.097 16.312-21.999 16.312h-49.35v-10.546h50.092z" fill="#94CE07"/>
+                                                    <path d="M322.628 136.633V90.907h-28.013V80.28h67.808v10.628h-28.014v45.726h-11.781z" fill="#94CE07"/>
+                                                    <path d="M392.414 91.485c-11.038 0-14.334 4.201-15.158 11.699h58.826v10.546h-58.826c.824 7.498 4.12 11.615 15.158 11.615h44.656v11.288h-44.656c-20.184 0-27.187-9.637-27.187-28.176 0-18.537 7.003-28.178 27.187-28.178h44.656v11.206h-44.656z" fill="#94CE07"/>
+                                                    <path d="M557.939 80.28l-20.35 45.562c-4.367 9.72-11.7 11.617-16.89 11.617-6.756 0-12.935-3.214-16.56-10.63l-4.202-8.568-4.118 8.568c-3.628 7.416-9.888 10.63-16.561 10.63-5.19 0-12.523-1.897-16.89-11.617l-20.35-45.563h12.44l18.455 41.278c1.73 3.788 3.46 4.776 6.261 4.776 3.05 0 4.86-1.233 6.344-4.282l8.158-16.726-12.113-25.046h11.864l6.51 13.512 6.59-13.512h11.864l-12.11 25.047 8.157 16.725c1.481 3.049 3.295 4.282 6.345 4.282 2.8 0 4.53-.988 6.26-4.776L545.5 80.28h12.44z" fill="#94CE07"/>
+                                                    <path d="M632.67 136.633h-12.688l-7.167-13.923H571.29l-7.167 13.923h-12.608l23.072-45.23c3.541-7.004 7.826-11.947 17.465-11.947 9.64 0 13.844 4.943 17.466 11.946l23.153 45.231zm-34.767-42.842c-1.236-2.389-2.803-3.871-5.851-3.871-3.047 0-4.615 1.482-5.848 3.87l-9.558 18.456h30.73l-9.473-18.455z" fill="#94CE07"/>
+                                                    <path d="M639.18 80.28h48.94c13.843 0 22.41 6.26 22.41 17.549 0 7.91-4.203 12.77-11.534 14.912 7.168 2.307 10.298 6.92 10.298 12.77v11.122H697.1v-11.372c0-3.129-1.729-7.165-9.226-7.165h-36.91v18.537h-11.785V80.28zm49.847 27.352c7.25 0 9.475-4.778 9.475-8.485 0-3.708-2.225-8.487-9.475-8.487h-38.064v16.972h38.064z" fill="#94CE07"/>
+                                                    <path d="M720.092 80.28h46.3c20.187 0 27.108 9.64 27.108 28.177 0 18.539-6.92 28.176-27.108 28.176h-46.3V80.28zm46.3 11.451H731.87V125.1h34.523c13.43 0 15.077-5.85 15.077-16.643 0-10.794-1.647-16.726-15.077-16.726z" fill="#94CE07"/>
+                                                    <path d="M255.953 162.058h-23.027c-7.992 0-10.44 3.78-10.44 11.426 0 7.693 2.448 11.43 10.44 11.43h23.027v3.266h-23.027c-9.839 0-13.834-4.812-13.834-14.696 0-9.792 3.909-14.693 13.834-14.693h23.027v3.267z" fill="#FBB711"/>
+                                                    <path d="M308.829 173.484c0 12.03-7.26 15.08-20.15 15.08-12.888 0-20.192-3.05-20.192-15.08 0-12.025 7.304-15.076 20.193-15.076 12.888 0 20.149 3.05 20.149 15.076zm-3.394 0c0-10.138-6.015-11.899-16.755-11.899-10.74 0-16.798 1.761-16.798 11.899 0 10.14 6.057 11.946 16.798 11.946 10.74 0 16.755-1.805 16.755-11.946z" fill="#FBB711"/>
+                                                    <path d="M327.593 188.18h-3.308v-29.39h2.834c7.047 0 9.023 2.536 17.443 13.792 7.948 10.653 9.065 12.244 13.62 12.244h.472V158.79h3.308v29.389h-2.835c-6.745 0-8.721-2.409-17.272-13.578-8.42-10.997-9.365-12.458-13.79-12.458h-.472v26.036z" fill="#FBB711"/>
+                                                    <path d="M402.81 185.172c4.896 0 7.173-1.717 7.173-4.812 0-3.094-2.32-4.643-7.82-5.114l-14.564-1.202c-6.529-.516-9.966-2.878-9.966-7.733 0-5.286 4.167-7.52 9.795-7.52h23.889v3.008H387.17c-3.909 0-6.143 1.378-6.143 4.425 0 2.923 2.019 4.296 7.433 4.769l14.176 1.206c6.96.6 10.74 2.789 10.74 8.03 0 4.9-3.306 7.95-10.74 7.95h-25.604v-3.007h25.778z" fill="#FBB711"/>
+                                                    <path d="M427.801 158.791h3.353v15.51c0 8.42 3.307 11.042 14.39 11.042 11.172 0 14.437-2.623 14.437-11.042v-15.51h3.307v15.51c0 10.355-4.682 14.264-17.744 14.264-12.758 0-17.743-3.693-17.743-14.264v-15.51z" fill="#FBB711"/>
+                                                    <path d="M483 158.791v17.788c0 6.059 2.878 8.336 10.438 8.336h19.12v3.265h-19.12c-9.495 0-13.79-3.396-13.79-11.6v-17.79h3.351z" fill="#FBB711"/>
+                                                    <path d="M529.475 188.18V161.8h-15.723v-3.009h34.756v3.008h-15.723v26.38h-3.31z" fill="#FBB711"/>
+                                                    <path d="M565.34 158.791v29.389h-3.35v-29.39h3.35z" fill="#FBB711"/>
+                                                    <path d="M585.656 188.18h-3.308v-29.39h2.837c7.045 0 9.022 2.536 17.442 13.792 7.946 10.653 9.065 12.244 13.617 12.244h.474V158.79h3.308v29.389h-2.835c-6.744 0-8.72-2.409-17.27-13.578-8.423-10.997-9.368-12.458-13.792-12.458h-.473v26.036z" fill="#FBB711"/>
+                                                    <path d="M672.6 173.528v14.652h-23.199c-9.88 0-13.831-4.9-13.831-14.736 0-9.752 3.907-14.653 13.831-14.653h22.9v3.267h-22.9c-7.99 0-10.44 3.736-10.44 11.386 0 7.733 2.492 11.47 10.44 11.47h19.85v-11.386h3.35z" fill="#FBB711"/>
+                                                    <path fill="#6B6B6B" d="M203.762 6.436v182.127h-1.908V6.436h1.908z"/>
+                                                </g>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                    <div>
+                                    </p>
 		<p>
 			<a class="git" href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
 		</p>
