--- a/name_project/templates/base.html
+++ b/name_project/templates/base.html
@@ -47,7 +47,7 @@
 		<a href="https://www.goodstewardconsulting.com" target="_self">
                                         <div>
                                             <?xml version="1.0" encoding="UTF-8"?>
-                                            <svg preserveAspectRatio="xMidYMid meet" data-bbox="4.5 6.435 789 182.13" viewBox="0 0 798 195" height="195" width="798" xmlns="http://www.w3.org/2000/svg" data-type="ugc" role=presentation aria-hidden=true>
+                                            <svg preserveAspectRatio="xMidYMid meet" data-bbox="4.5 6.435 789 182.13" viewBox="0 0 798 195" height="40%" width="40%" xmlns="http://www.w3.org/2000/svg" data-type="ugc" role=presentation aria-hidden=true>
                                                 <g>
                                                     <linearGradient y2="158.65" x2="122.144" y1="94.782" x1="83.346" gradientUnits="userSpaceOnUse" id="b51e4707-4c5a-4fd8-83e1-484d74550baa_comp-jpdq366t">
                                                         <stop offset="0" stop-color="#94ce07"/>
@@ -92,6 +92,9 @@
                                     </a>
                                     <div>
                                     </p>
+		<p>
+		Site content does not reflect the views of any sponsor.
+		</p>
 		<p>
 			<a class="git" href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
 		</p>
