--- a/name_project/templates/base.html
+++ b/name_project/templates/base.html
@@ -93,7 +93,7 @@
                                     <div>
                                     </p>
 		<p>
-		Site content does not reflect the views of any sponsor.
+		Sponsor makes no representations or warranties, express or implied, regarding site content.
 		</p>
 		<p>
 			<a class="git" href="https://github.com/robotmlg/help-me-name-my-project">Contribute on GitHub</a>
