--- a/name_project/static/main.css
+++ b/name_project/static/main.css
@@ -67,8 +67,8 @@ footer
 {
 	margin-top:-20px;
 	margin-bottom: 36px;
-	font-size: 16px;
-	font-family: pstart;
+	font-size: 18px;
+	font-family: reg;
 	text-align: center;
 	margin-left:3vw;
 	margin-right:3vw;
@@ -76,10 +76,10 @@ footer
 
 a.foot:link, a.foot:visited
 {
-	font-family: pstart;
+	font-family: reg;
 	color: black;
     	text-decoration: none;
-  	font-size: 16px;
+  	font-size: 18px;
   	cursor: pointer;
 	overflow: hidden;
 }
